--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,26 +1,32 @@
 
-<div class="container mt-3">
+<div class="container mt-5 text-center">
   <div class="row">
     <div class="col-12">
-<h1>The Mixologist</h1>
+<h1>Sylvain's</h1>
+<p>"Perdu sur l'Internet?<br>
+ Pas de panique, on va vous aider."</p>
    </div>
   </div>
 
 <div class="row">
-<% @cocktails.each do |cocktail| %>
-<div class="col-4">
-  <div class="card">
-  <div class="card-image" style="background-color: blue"></div>
+<%@cocktails.each do |cocktail| %>
+    <div class="col-lg-4">
+  <div class="card text-center mt-3" style="width: 18rem; height: 5rem;">
   <div class="card-content">
-  <div class="card-title">
-  <h4><%= link_to cocktail.name, cocktail_path(cocktail) %></h4>
-  <%= link_to "Delete", cocktail_path(cocktail), method: :delete %>
+  <h5 class= "card-title mt-4"><%= link_to cocktail.name, cocktail_path(cocktail) %></h5>
 </div>
 </div>
+</div>
+<%end%>
+
+</div>
+
+<div class="row mt-5">
+  <div class="col"></div>
+  <div class="col">
+    <%= link_to "Add a cocktail", new_cocktail_path, class: "btn btn-primary" %>
+  </div>
+  <div class ="col"></div>
 </div>
   </div>
 </div>
-<%end%>
-<%= link_to "Add a cocktail", new_cocktail_path %>
-
-
