--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -9,10 +9,12 @@
                 <%= f.input :name %>
                 <%= f.button :submit, :class => "btn btn-primary" %>
                 <% end %>
+                </div>
+
+              <div class="mt-2">
+                <%= link_to 'Cancel', cocktails_path, class: 'btn btn-danger' %>
               </div>
-              <div class="mt-3">
-                <%= link_to 'Cancel', '#', class: 'btn btn-danger ml-2' %>
-              </div>
+            </div>
           </div>
         </div>
       </div>
