--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,8 +1,21 @@
-<h3>ADD A DOSE</h3>
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-6 m-auto">
+        <div class="form">
+<h3>Add a dose</h3>
+          <div class="mt-3">
    <%= simple_form_for [@cocktail, @dose] do |f| %>
-        <%= f.association :ingredients %>
+        <%= f.association :ingredient %>
         <%= f.input :description %>
-        <%= f.button :submit %>
+        <%= f.button :submit, class: "btn btn-primary" %>
   <% end %>
+</div>
 
-<%link_to "back", cocktails_path %>
+<div class="mt-2">
+<%= link_to "Back", cocktails_path, class: "btn btn-primary" %>
+</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
