--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,17 +1,44 @@
+<div class="banner p-400px" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(/assets/images/bg2.jpg)">
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+
+  </div>
+
+
+
+
+  </div>
+</div>
 
 <div class="container mt-5 text-center">
   <div class="row">
     <div class="col-12">
-<h1>Sylvain's</h1>
+<h1>Sylvain's </h1>
 <p>"Perdu sur l'Internet?<br>
- Pas de panique, on va vous aider."</p>
+ Pas de panique, vous êtes ici."</p>
    </div>
   </div>
 
 <div class="row">
 <%@cocktails.each do |cocktail| %>
     <div class="col-lg-4">
-  <div class="card text-center mt-3" style="width: 18rem; height: 5rem;">
+  <div class="card text-center mt-3" style="width: 18rem; height: 20rem;">
+    <div class="card-image pt-3">
+    <%= image_tag "bg2.jpg", width: "150" %>
+  </div>
   <div class="card-content">
   <h5 class= "card-title mt-4"><%= link_to cocktail.name, cocktail_path(cocktail) %></h5>
 </div>
