--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,9 +1,20 @@
+<div class="container mt-5">
+    <div class="row">
+      <div class="col-6 m-auto">
+        <h3>Write a Review</h3>
           <div class="mt-3">
 
             <%= simple_form_for [@cocktail, @review] do |f| %>
-                <%= f.input :name %>
+                <%= f.input :review_name %>
                 <%= f.input :rating %>
                 <%= f.input :content %>
                 <%= f.button :submit, :class => "btn btn-primary" %>
                 <% end %>
               </div>
+
+<div class="mt-2">
+<%= link_to "Back", cocktails_path, class: "btn btn-primary" %>
+</div>
+            </div>
+          </div>
+        </div>
