--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -8,7 +8,8 @@
 <h3>Ingredients</h3>
           <div class="mt-3">
 
-<img src="..." class="rounded mx-auto d-block" alt="...">
+<%= image_tag @cocktail.picture_url, width: "200" %>
+
 <%@cocktail.doses.each do |dose|%>
 <ul>
 <li> <%=dose.description%> <%=dose.ingredient.name%>
