--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -8,7 +8,7 @@
 <h3>Ingredients</h3>
           <div class="mt-3">
 
-<%= image_tag @cocktail.picture_url, width: "200" %>
+<%= image_tag "bg2.jpg", width: "200" %>
 
 <%@cocktail.doses.each do |dose|%>
 <ul>
