--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,4 +1,4 @@
-<div class="banner p-400px" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(/assets/images/bg2.jpg)">
+<div class="banner p-400px">
   <br>
   <br>
   <br>
@@ -7,14 +7,6 @@
   <br>
   <br>
   <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-
   </div>
 
 
