--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -12,6 +12,13 @@
                 <% end %>
               </div>
 
+<%= simple_form_for(cocktail) do |f| %>
+  <!-- [...] -->
+  <%= f.input :photo %>
+  <%= f.input :photo_cache, as: :hidden %>
+  <!-- [...] -->
+<% end %>
+
 <div class="mt-2">
 <%= link_to "Back", cocktails_path, class: "btn btn-primary" %>
 </div>
