--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -19,8 +19,9 @@
   <div class="row">
     <div class="col-12">
 <h1>Sylvain's </h1>
-<p>"Perdu sur l'Internet?<br>
- Pas de panique, vous êtes ici."</p>
+<br>
+<p style="font-size: 20px">Perdu sur l'Internet?<br>
+ Pas de panique, vous êtes ici.</p>
    </div>
   </div>
 
